# manim_videos

./: custom_config.yml  pyproject.toml
_2024/manim_demo/: lorenz.py
src/manim_imports_ext/: __init__.py
src/manim_imports_ext/custom/: banner.py  end_screen.py
src/manim_imports_ext/custom/characters/: pi_creature_animations.py  pi_creature_scene.py
