[build-system]
requires = ["setuptools>=61.0", "wheel", "black", "PyYAML"]
build-backend = "setuptools.build_meta"

[project]
name = "mymanim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "manimgl @ git+https://github.com/xela144/manim.git",
    "setuptools<69",
]

[tool.setuptools.packages.find]
where = ["src"]
